--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -310,7 +310,7 @@ jobs:
           artifacts: "*.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
           body: "Version ${{ env.the_version }}"
-          makeLatest: ${{ github.ref == 'refs/heads/main' }}
+          makeLatest: "${{ github.ref == 'refs/heads/main' }}"
 
       #########################################################################
       # Publish to pypi.org
