--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -406,6 +406,13 @@ jobs:
           echo "TARGET_ENV_UPPERCASE=${override_env_upper}" >> $GITHUB_ENV
 
 
+      - name: Lower Case Target Env
+        run: |
+          original_env_value="${TARGET_ENV_UPPERCASE}"
+          lowercase_value=$(echo "${original_env_value}" | tr '[:upper:]' '[:lower:]')
+          echo "TARGET_ENV_LOWERCASE=${lowercase_value}" >> $GITHUB_ENV
+
+
       - name: Extract metadata (tags, labels) for Docker
         if: |
           steps.pypi-test-publish.conclusion == 'success' ||
@@ -419,7 +426,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{raw}},value=${{ env.the_version }}
-            type=raw,value=${{ env.TARGET_ENV_UPPERCASE }}
+            type=raw,value=${{ env.TARGET_ENV_LOWERCASE }}
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
 
