--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -421,13 +421,14 @@ jobs:
           github.event.head_commit.message == '/deploy uat' ||
           github.event.head_commit.message == '/deploy sandbox'
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=${{ github.ref == 'refs/heads/main' }}
           tags: |
             type=semver,pattern={{raw}},value=${{ env.the_version }}
             type=raw,value=${{ env.TARGET_ENV_LOWERCASE }}
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
 
       - name: Show meta outputs
