--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.10, <3.13"
 numpy = "^1.22.3"
 matplotlib = "^3.5.1"
 netCDF4 = "^1.5.8"
@@ -25,6 +25,7 @@ pygeogrids = "^0.4.1"
 cumulus-process = "^1.0.0"
 requests = "^2.27.1"
 click = "^8.1.7"
+scipy = "^1.11.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
