--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -535,7 +535,7 @@ jobs:
           account_id: ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
           repo: podaac/tig
           region: us-west-2
-          tags: ${{ env.the_version }}
+          tags: ${{ steps.meta.outputs.version }}
           create_repo: true
           dockerfile: ./docker/lambdaDockerfile
           extra_build_args: --build-arg DIST_PATH="dist/" --build-arg SOURCE=${{ env.local_tig }}
