--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -610,6 +610,6 @@ jobs:
           cat override.tf.json
           echo "End show override contents"
           terraform --version
-          source bin/config.sh ${{ env.venue }}
-          terraform plan -var-file=tfvars/"${{ env.venue }}".tfvars -var="app_version=${{ env.the_version }}" -out="tfplan"
+          source bin/config.sh ${{ env.TARGET_ENV_LOWERCASE }}
+          terraform plan -var-file=tfvars/"${{ env.TARGET_ENV_LOWERCASE }}".tfvars -var="app_version=${{ env.the_version }}" -out="tfplan"
           terraform apply -auto-approve tfplan
