--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -342,7 +342,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         id: pypi-publish
         env:
-          POETRY_PYPI_TOKEN_PYPI: ${{secrets.POETRY_PYPI_TOKEN_PYPI}}
+          POETRY_PYPI_TOKEN_PYPI: ${{secrets.PYPI_API_TOKEN}}
         run: |
           poetry publish
 
