--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -260,6 +260,20 @@ jobs:
       #########################################################################
       # Publish new version numbers
       #########################################################################
+      
+      - name: Quick check for changes
+        id: check_changes
+        if: |
+          github.ref == 'refs/heads/develop' ||
+          github.ref == 'refs/heads/main'    ||
+          startsWith(github.ref, 'refs/heads/release')
+        run: |          
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "changes=true" >> $GITHUB_ENV               
+          else
+            echo "changes=false" >> $GITHUB_ENV
+          fi
+      
       - name: Commit Version Bump
         # If building develop, a release branch, or main then we commit the version bump back to the repo
         if: |
