--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -276,10 +276,7 @@ jobs:
       
       - name: Commit Version Bump
         # If building develop, a release branch, or main then we commit the version bump back to the repo
-        if: |
-          github.ref == 'refs/heads/develop' ||
-          github.ref == 'refs/heads/main'    ||
-          startsWith(github.ref, 'refs/heads/release')
+        if: steps.check_changes.outputs.changes == 'true'
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
