--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.10, <3.13"
 numpy = "^1.22.3"
 matplotlib = "^3.5.1"
 netCDF4 = "^1.5.8"
@@ -24,6 +24,8 @@ imageio = "^2.16.1"
 pygeogrids = "^0.4.1"
 cumulus-process = "^1.0.0"
 requests = "^2.27.1"
+click = "^8.1.7"
+scipy = "^1.11.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
@@ -31,11 +33,12 @@ flake8 = "^4.0.1"
 pytest-cov = "^3.0.0"
 pylint = "^2.13.5"
 Sphinx = "^4.5.0"
-moto = "^3.1.4"
+moto = "^4.2.5"
 mock = "^4.0.3"
 
 [tool.poetry.scripts]
 tig = 'podaac.tig.cli:main'
+generate_hitide_config = 'podaac.tig.generate_hitide_config:generate_hitide_config'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
