--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ mock = "^4.0.3"
 
 [tool.poetry.scripts]
 tig = 'podaac.tig.cli:main'
-generate_hitide_config = 'podaac.tig.generate_hitide_config:generate_hitide_config'
+generate_hitide_config = 'podaac.tig.generate_hitide_config:generate_hitide_config_command'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
