revert github actons

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -342,9 +342,7 @@ jobs:
         id: pypi-test-publish
         if: |
           github.ref == 'refs/heads/develop' ||
-          startsWith(github.ref, 'refs/heads/release') ||
-          github.event.head_commit.message == '/deploy sit' ||
-          github.event.head_commit.message == '/deploy uat'
+          startsWith(github.ref, 'refs/heads/release')
         env:
           POETRY_PYPI_TOKEN_TESTPYPI: ${{secrets.TEST_PYPI_API_TOKEN}}
         run: |
