--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ netCDF4 = "^1.5.8"
 xarray = "^2022.3.0"
 imageio = "^2.16.1"
 pygeogrids = "^0.4.1"
-cumulus-process = "^1.0.0"
+cumulus-process = "^1.3.0"
 requests = "^2.27.1"
 click = "^8.1.7"
 scipy = "^1.11.3"
@@ -39,6 +39,9 @@ mock = "^4.0.3"
 [tool.poetry.scripts]
 tig = 'podaac.tig.cli:main'
 generate_hitide_config = 'podaac.tig.generate_hitide_config:generate_hitide_config_command'
+
+[tool.poetry.group.dev.dependencies]
+scikit-image = "^0.22.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
