--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -357,7 +357,7 @@ jobs:
         env:
           POETRY_PYPI_TOKEN_PYPI: ${{secrets.PYPI_API_TOKEN}}
         run: |
-          poetry publish
+          poetry publish --skip-existing
 
       # - name: Publish to pypi.org
       #   if: ${{ github.ref == 'refs/heads/main' }}
