--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -267,7 +267,7 @@ jobs:
           github.ref == 'refs/heads/develop' ||
           github.ref == 'refs/heads/main'    ||
           startsWith(github.ref, 'refs/heads/release')
-        run: |          
+        run: |
           if [ -n "$(git status --porcelain)" ]; then
             echo "changes=true" >> $GITHUB_ENV
             echo "::set-output name=changes::true"
@@ -468,63 +468,6 @@ jobs:
             SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
 
 
-      ## Build and publish to Service ECR
-      - name: Upload Docker image to Service ECR
-        if: |
-          github.ref == 'refs/heads/develop' ||
-          github.ref == 'refs/heads/main'    ||
-          startsWith(github.ref, 'refs/heads/release')
-        uses: vitr/actions-build-and-upload-to-ecs@master
-        with:
-          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          repo: podaac/tig
-          region: us-west-2
-          tags: ${{ env.the_version }}
-          create_repo: true
-          dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: --build-arg SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
-
-
-      ## Build and publish to Cumulus ECR
-      - name: Upload Docker image to Cumulus ECR
-        if: |
-          github.ref == 'refs/heads/develop' ||
-          github.ref == 'refs/heads/main'    ||
-          startsWith(github.ref, 'refs/heads/release')
-        uses: vitr/actions-build-and-upload-to-ecs@master
-        with:
-          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          repo: podaac/tig
-          region: us-west-2
-          tags: ${{ env.the_version }}
-          create_repo: true
-          dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: --build-arg SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
-
-
-      ## Build and publish to SWOT Cumulus ECR
-      - name: Upload Docker image to SWOT Cumulus ECR
-        if: |
-          github.ref == 'refs/heads/develop' ||
-          github.ref == 'refs/heads/main'    ||
-          startsWith(github.ref, 'refs/heads/release')
-        uses: vitr/actions-build-and-upload-to-ecs@master
-        with:
-          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_CUMULUS_SWOT_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_CUMULUS_SWOT_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_CUMULUS_SWOT_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          repo: podaac/tig
-          region: us-west-2
-          tags: ${{ env.the_version }}
-          create_repo: true
-          dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: --build-arg SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
-
-
     ## Local tig docker builds
 
       - name: Get Local Tig Build
@@ -552,59 +495,6 @@ jobs:
           build-args: |
             DIST_PATH="dist/"
             SOURCE=${{ env.local_tig }}
-
-      ## Build and publish to Service ECR
-      - name: Upload Local TIG Docker image to Service ECR
-        if: |
-          github.event.head_commit.message == '/deploy sit' ||
-          github.event.head_commit.message == '/deploy uat'
-        uses: vitr/actions-build-and-upload-to-ecs@master
-        with:
-          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          repo: podaac/tig
-          region: us-west-2
-          tags: ${{ steps.meta.outputs.version }}
-          create_repo: true
-          dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: --build-arg DIST_PATH="dist/" --build-arg SOURCE=${{ env.local_tig }}
-
-      ## Build and publish to Cumulus ECR
-      - name: Upload Local TIG Docker image to Cumulus ECR
-        if: |
-          github.event.head_commit.message == '/deploy sit' ||
-          github.event.head_commit.message == '/deploy uat' ||
-          github.event.head_commit.message == '/deploy sandbox'
-        uses: vitr/actions-build-and-upload-to-ecs@master
-        with:
-          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          repo: podaac/tig
-          region: us-west-2
-          tags: ${{ steps.meta.outputs.version }}
-          create_repo: true
-          dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: --build-arg DIST_PATH="dist/" --build-arg  SOURCE=${{ env.local_tig }}
-
-      ## Build and publish to SWOT Cumulus ECR
-      - name: Upload Local TIG Docker image to SWOT Cumulus ECR
-        if: |
-          github.event.head_commit.message == '/deploy sit' ||
-          github.event.head_commit.message == '/deploy uat' ||
-          github.event.head_commit.message == '/deploy sandbox'
-        uses: vitr/actions-build-and-upload-to-ecs@master
-        with:
-          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_CUMULUS_SWOT_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_CUMULUS_SWOT_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_CUMULUS_SWOT_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          repo: podaac/tig
-          region: us-west-2
-          tags: ${{ steps.meta.outputs.version }}
-          create_repo: true
-          dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: --build-arg DIST_PATH="dist/" --build-arg  SOURCE=${{ env.local_tig }}
 
       # #########################################################################
       # # Build and Publish Documentation
@@ -650,7 +540,7 @@ jobs:
           ls -al bin/
           which python3
           python3 --version
-          python3 override.py https://github.com/podaac/tig/releases/download/${{ env.the_version }}/tig-terraform-${{ env.the_version }}.zip ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}.dkr.ecr.us-west-2.amazonaws.com/podaac/tig:${{ steps.meta.outputs.version }}
+          python3 override.py https://github.com/podaac/tig/releases/download/${{ env.the_version }}/tig-terraform-${{ env.the_version }}.zip "ghcr.io/podaac/tig:${{ env.DOCKER_METADATA_OUTPUT_VERSION }}"
           ls -al
           echo "Show override contents"
           cat override.tf.json
