--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,12 @@ jobs:
         with:
           poetry-version: 1.3.2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       #########################################################################
       # Versioning (featuring weird gradle output work-arounds)
       #########################################################################
@@ -459,11 +465,12 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./docker/lambdaDockerfile
+          file: ./docker/lambdaDockerfileArm
           push: true
           pull: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/arm/v7
           build-args: |
             SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
 
@@ -487,11 +494,12 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./docker/lambdaDockerfile
+          file: ./docker/lambdaDockerfileArm
           push: true
           pull: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/arm/v7
           build-args: |
             DIST_PATH="dist/"
             SOURCE=${{ env.local_tig }}
