--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
       # Checks out this repository and sets up the build/test environment with 
       # gradle
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -321,7 +324,7 @@ jobs:
           github.event.head_commit.message == '/deploy sit' ||
           github.event.head_commit.message == '/deploy uat' ||
           github.event.head_commit.message == '/deploy sandbox'
-        uses: ncipollo/release-action@v1.12.0
+        uses: ncipollo/release-action@v1
         with:
           tag: ${{ env.the_version }}
           artifacts: "*.zip"
