--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -554,7 +554,5 @@ jobs:
           terraform --version
           source bin/config.sh ${{ env.TARGET_ENV_LOWERCASE }}
           terraform plan -var-file=tfvars/"${{ env.TARGET_ENV_LOWERCASE }}".tfvars -var="app_version=${{ env.the_version }}" -out="tfplan"
-          terraform apply -auto-approve tfplan
-        with:
-          silent: true
+          terraform apply -auto-approve tfplan > /dev/null
 
